apps/mail/snappymail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snappymail
  namespace: mail
  labels:
    app: snappymail
spec:
  type: ClusterIP
  selector:
    app: snappymail
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: http
