apps/mail/snappymail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappymail
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webmail.klr.kr
      secretName: webmail-klr-kr-tls
  rules:
    - host: webmail.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snappymail
                port:
                  number: 8888
